--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body{
     display: flex;
     background-image:url(images/shapes/Frame\ 57.jpg)
 }
+
+.second_sec{
+    display: flex;
+    background-image:url(images/shapes/Frame\ 58.jpg)
+}
 h1{
     font-size: 60px;
     color: rgb(184, 174, 174);
@@ -35,7 +40,7 @@ span{
     padding-left: 2%;
 }
 .pic1 img{
-    width: 100%;
+    width: 90%;
 }
 a{
     text-decoration: none;
@@ -43,7 +48,41 @@ a{
     color: white;
     font-weight: 200;
     font-size: 20px;
-    padding: 12px 25px;
-    border-radius: 20px;
+    padding: 15px 30px;
+    border-radius: 30px;
+    position: absolute;
+    margin-top: 20px;
+    border: 1px solid;
+    box-shadow: 5px 10px 18px #ffad77;
 }
 
+.pic2{
+    width: 45%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.pic2 img{
+    width: 90%;
+}
+.text2{
+    width: 45%;
+    float: left;
+    padding: 5px;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.text2 a{
+    margin-top: 60px;
+}
+
+.recipies{
+    text-align: center;
+}
+.recipies_box{
+    display: flex;
+}
+.recipies_box img{
+    width: 80%;
+    float: left;
+}
