--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@ body{
 
 .first_sec{
     display: flex;
-    background-image:url(images/shapes/Frame\ 57.jpg)
+    background-image:url(images/shapes/Frame\ 57.jpg);
+    margin-bottom: 50px;
 }
 
 .second_sec{
     display: flex;
-    background-image:url(images/shapes/Frame\ 58.jpg)
+    background-image:url(images/shapes/Frame\ 58.jpg);
+}
+.third_sec{
+    margin-bottom: 100px;
 }
 h1{
     font-size: 60px;
@@ -78,11 +82,42 @@ a{
 
 .recipies{
     text-align: center;
+    margin-bottom: 50px;
 }
 .recipies_box{
     display: flex;
 }
 .recipies_box img{
-    width: 80%;
+    width: 100%;
     float: left;
+    margin-bottom: 25px;
 }
+.box{
+    width: 26%;
+    float: left;
+    padding: 15px;
+    margin-left: 4%;
+    border: 0px solid;
+    box-shadow: 5px 10px 8px 10px #d3cbcb;
+    border-radius: 15px;
+}
+h3{
+    padding-top: 15px;
+    font-size: 30px;
+    font-weight: 100px;
+}
+.box_p{
+    font-size: 20px;
+}
+footer{
+    background-color: black;
+    text-align: center;
+    padding: 20px 0px;
+}
+footer h2{
+    color: rgb(80, 74, 74);
+}
+footer p{
+    color: white;
+}
+
