--- a/style.css
+++ b/style.css
@@ -2,13 +2,51 @@ body{
     font-family: 'Fira Sans', sans-serif;
     margin: 0;
 }
-
-.first_sec{
-    display: flex;
-    background-image:url(images/shapes/Frame\ 57.jpg);
-    margin-bottom: 50px;
+.navbar{
+    background-image: linear-gradient(#cc2b5e , #753a88);
+}
+.food_network{
+    float: left;
+    margin: 0;
+    padding: 0;
+    color:rgb(6, 247, 207);
+    font-size: 30px;
+    margin-left: 10%;
+    padding: 8px 16px;
+    font-weight: 600;
+    
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    margin-bottom: 15px
+  }
+  
+  li {
+    float: right;
+    margin-right: 10%;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: rgb(172, 9, 9);
+  }
+
+  .first_sec{
+    display: flex;
+    background-image:url(images/shapes/Frame\ 57.jpg);
+    
+}
 .second_sec{
     display: flex;
     background-image:url(images/shapes/Frame\ 58.jpg);
@@ -46,7 +84,7 @@ span{
 .pic1 img{
     width: 90%;
 }
-a{
+.button{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     color: white;
