--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
 }
 .navbar{
-    background-image: linear-gradient(#F8EFBA , #58B19F);
+    background-image: linear-gradient(#F8EFBA , #ffb79a);
 }
 .food_network{
     float: left;
@@ -70,7 +70,7 @@ h1{
     color: rgb(184, 174, 174);
 }
 span{
-    color: rgb(150, 70, 33);
+    color: rgb(3, 129, 119);
 }
 .p1{
     font-size: 20px;
@@ -165,15 +165,18 @@ h3{
     float: left;
     margin-left: 17%;
 }
+.rating p{
+    color:darkred;
+}
 footer{
-    background-color: #EAB543;
+    background-color: #422009;
     text-align: center;
     padding: 20px 0px;
 }
 footer h2{
-    color: rgb(48, 43, 43);
+    color: rgb(148, 148, 148);
 }
 footer p{
-    color: rgb(128, 35, 35);
+    color: rgb(244, 252, 138);
 }
 
