--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
     font-family: 'Fira Sans', sans-serif;
     margin: 0;
@@ -22,7 +23,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    margin-bottom: 15px
+    margin-bottom: 15px;
   }
   
   li {
