--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
 }
 .navbar{
-    background-image: linear-gradient(#F8EFBA , #ffb79a);
+    background-image: linear-gradient(45deg,#F8EFBA , #ffb79a);
 }
 .food_network{
     float: left;
@@ -108,7 +108,7 @@ span{
 }
 .button{
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+    background-image: linear-gradient(45deg,orange, tomato);
     color: white;
     font-weight: 200;
     font-size: 20px;
