--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 }
 .navbar{
     background-image: linear-gradient(45deg,#F8EFBA , #ffb79a);
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 .food_network{
     float: left;
@@ -23,7 +26,6 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    margin-bottom: 15px;
   }
   
   li {
@@ -41,10 +43,13 @@ ul {
   
   li a:hover {
     background-color: rgb(255, 119, 56);
+    transition : all linear 0.4s;
   }
 
   .first_sec{
     display: flex;
+    width: 100%;
+    background-image: url(images/shapes/Frame\ 57.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
